# music_generator

./: .gitignore  Cargo.toml  Readme.md
src/: l_system.rs  lib.rs  main.rs  model.rs  musical_notation.rs  voice.rs
src/model/: .l_system.rs.kate-swp  l_system.rs  musical_notation.rs
src/musical_notation/: duration.rs  pitch.rs  volume.rs
src/musical_notation/pitch/: error.rs  temperament.rs
src/musical_notation/pitch/temperament/: error.rs  proportionen.rs
src/voice/: action.rs
src/voice/action/: error.rs  simple_action.rs
src/voice/action/simple_action/: error.rs
tests/: voices_for_scales.rs
